# turtlecam

./: CMakeLists.txt  Main.hs  README.md  TODO.md  Turtle.hs  Vector.hs  basic.lua  cam.lua  drill.lua  face.lua  helical_plunge.lua  hexagon.lua  hilbert.lua  lathe_face.lua  nc_tools.conf  play.lua  rounded_rect.lua  slot.lua  troichoid.lua  turtlecam.cabal  turtlecam.cpp
lib/: cam.lua
