CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(turtlecam)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")

FIND_PACKAGE(Lua REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

ADD_EXECUTABLE(turtlecam turtlecam.cpp)
TARGET_LINK_LIBRARIES(turtlecam ${LUA_LIBRARIES})
