CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(turtlecam)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")

FIND_PACKAGE(Lua REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options filesystem system REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")

INCLUDE_DIRECTORIES(
    ${LUA_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(turtlecam turtlecam.cpp)
TARGET_LINK_LIBRARIES(turtlecam 
    ${LUA_LIBRARIES}
    ${Boost_LIBRARIES}
)
